name:          raaz-benchmarks
version:       0.0.0.1
synopsis:      Benchmarking helpers for raaz library
homepage:      http://github.com/piyush-kurur/raaz
license:       BSD3
license-file:  LICENSE
author:        Satvik Chauhan and Piyush P Kurur
maintainer:    ppk@cse.iitk.ac.in
category:      Codec, Raaz
build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/piyush-kurur/raaz/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-benchmarks

library
  exposed-modules: Raaz.Benchmark.Gadget
  other-modules:
  build-depends: base
               , bytestring
               , criterion                   >= 0.6
               , HUnit                       >= 1.2
               , QuickCheck                  >= 2.4
               , test-framework              >= 0.6
               , test-framework-hunit        >= 0.2
               , test-framework-quickcheck2  >= 0.2

               -- Dependency on other raaz packages.
               , raaz-primitives             >= 0.0.0.1
  ghc-options: -Wall

test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  ghc-options: -Wall

  if os(linux)
     cc-options: -Wall -Werror -O3 -DRAAZ_HAVE_GCC
  else
     cc-options:

  build-depends: base
               , bytestring
               , HUnit                       >= 1.2
               , QuickCheck                  >= 2.4
               , test-framework              >= 0.6
               , test-framework-hunit        >= 0.2
               , test-framework-quickcheck2  >= 0.2

               -- Dependencies on raaz packages.
               , raaz-primitives             >= 0.0.0.1
               , raaz-tests                  >= 0.0.0.1
