name:    raaz-benchmarks
version: 0.0.0.1

synopsis: Benchmarking for raaz packages

description: This package collects generic benchmarking code for raaz
  primitives. Say there is a cipher benchmark that checks the time
  taken to encrypt a bytestring. This is generic in the sense that it
  is applicable for any cipher. We would use these benchmarks to
  compare the performance of two differnet implementations. Such
  benchmarks end up in this package.

homepage:      http://github.com/raaz-crypto/raaz
license:       BSD3
license-file:  LICENSE
author:        Satvik Chauhan and Piyush P Kurur
maintainer:    ppk@cse.iitk.ac.in
category:      Codec, Raaz
build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/raaz-crypto/raaz/issues

source-repository head
  type: git
  location: https://github.com/raaz-crypto/raaz
  subdir: raaz-benchmarks

library
  exposed-modules: Raaz.Benchmark.Gadget
  other-modules:
  build-depends: base                           >= 4.5     && < 4.8
               , bytestring                     >= 0.9     && < 0.11
               , criterion                      >= 0.8.0.2 && < 0.9
               , HUnit                          >= 1.2     && < 1.3
               , QuickCheck                     >= 2.4     && < 2.7
               , test-framework                 >= 0.6     && < 0.9
               , test-framework-hunit           >= 0.2     && < 0.4
               , test-framework-quickcheck2     >= 0.2     && < 0.4
               --
               -- Dependency on other raaz packages.
               --
               , raaz-core                      >= 0.0.0.1 && < 0.0.0.2
  ghc-options: -Wall

test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  ghc-options: -Wall

  build-depends: base                           >= 4.5 && < 4.8
               , bytestring                     >= 0.9 && < 0.11
               , HUnit                          >= 1.2 && < 1.3
               , QuickCheck                     >= 2.4 && < 2.7
               , test-framework                 >= 0.6 && < 0.9
               , test-framework-hunit           >= 0.2 && < 0.4
               , test-framework-quickcheck2     >= 0.2 && < 0.4
               --
               -- Dependencies on raaz packages.
               --
               , raaz-core                      >= 0.0.0.1 && < 0.0.0.2

  if os(linux)
     cc-options: -Wall -Werror -O3 -DRAAZ_HAVE_GCC
  else
     cc-options:
