name:          raaz-cipher-aes
version:       0.0.0.0
synopsis:      Implementation of the AES cipher for raaz library
homepage:      http://github.com/piyush-kurur/raaz
license:       BSD3
license-file:  LICENSE
author:        Satvik Chauhan
maintainer:    satvikc@iitk.ac.in
category:      Codec, Raaz
build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/piyush-kurur/raaz/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-cipher-aes

library
  exposed-modules: Raaz.Cipher.AES.Type
                 , Raaz.Cipher.AES.Ref.Type
                 , Raaz.Cipher.AES.Ref.Block
                 , Raaz.Cipher.AES.CBC.CPortable
                 , Raaz.Cipher.AES.CBC.Instance
                 , Raaz.Cipher.AES.CBC.Ref
                 , Raaz.Cipher.AES.CBC.Type
                 , Raaz.Cipher.AES.CTR.CPortable
                 , Raaz.Cipher.AES.CTR.Instance
                 , Raaz.Cipher.AES.CTR.Ref
                 , Raaz.Cipher.AES.CTR.Type
                 , Raaz.Cipher.AES.ECB.CPortable
                 , Raaz.Cipher.AES.ECB.Instance
                 , Raaz.Cipher.AES.ECB.Ref
                 , Raaz.Cipher.AES.ECB.Type
  other-modules: Raaz.Cipher.Util.GF
  build-depends: base
               , bytestring
               , raaz-primitives==0.0.0.0
               , vector
  ghc-options: -Wall

  c-sources: cbits/raaz/cipher/cportable/aes.c
  include-dirs: cbits


  if os(linux)
     cc-options: -Wall -Werror -O3 -DRAAZ_HAVE_GCC
  else
     cc-options:



test-Suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: base
               , bytestring
               , test-framework==0.6.*
               , QuickCheck==2.4.*
               , raaz-primitives==0.0.0.0
               , raaz-cipher-aes==0.0.0.0
               , raaz-tests==0.0.0.0
