name:          raaz-cipher
version:       0.0.0.1
synopsis:      Implementation of the AES cipher for raaz library
homepage:      http://github.com/piyush-kurur/raaz
license:       BSD3
license-file:  LICENSE
author:        Satvik Chauhan
maintainer:    satvikc@iitk.ac.in
category:      Codec, Raaz
build-type:    Simple
cabal-version: >=1.9.2

bug-reports: https://github.com/piyush-kurur/raaz/issues

source-repository head
  type: git
  location: https://github.com/piyush-kurur/raaz
  subdir: raaz-cipher

library
  exposed-modules: Raaz.Cipher.AES.Type
                 , Raaz.Cipher.AES.Internal
                 , Raaz.Cipher.AES.Ref.Internal
  other-modules: Raaz.Cipher.Util.GF
               , Raaz.Cipher.AES.Ref.Type
  build-depends: base                           >= 4.5 && < 4.7
               , bytestring                     >= 0.9 && < 0.11
               , data-default                   >= 0.4 && < 0.6
               , mtl                            >= 2.1 && < 2.2
               , tagged                         >= 0.2 && < 0.8
               --
               -- Raaz dependencies
               --
               , raaz-primitives                >=0.0.0.1 && < 0.0.0.2
  ghc-options: -Wall

  c-sources: cbits/raaz/cipher/cportable/aes.c
  include-dirs: cbits


  if os(linux)
     cc-options: -Wall -Werror -O3 -DRAAZ_HAVE_GCC
  else
     cc-options:
